Tweaks to size and space of services

--- a/services.html
+++ b/services.html
@@ -188,37 +188,37 @@
     
     <div class="container bg-white my-5">
         <div class="row row-cols-2 row-cols-md-3 align-items-center justify-content-center">
-            <div class="col p-5 text-center box">
+            <div class="col p-3 text-center box">
                 <img src="assets/wheelbarrow.png" alt="" class="md-icon mx-auto" loading="lazy" decoding="async">
                 <div>
-                    <p class="h4 fw-bold mb-0">Yard Maintanance & Cleanup</p>
+                    <p class="h4 fw-bold mb-0">Yard Maintanance</p>
                 </div>
             </div>
-            <div class="col p-5 text-center box">
+            <div class="col p-3 text-center box">
                 <img src="./assets/gloves.png" alt="" class="md-icon mx-auto" loading="lazy" decoding="async">
                 <div>
                     <p class="h4 fw-bold mb-0">Patios</p>
                 </div>
             </div>
-            <div class="col p-5 text-center box">
+            <div class="col p-3 text-center box">
                 <img src="assets/sprinkler.png" alt="" class="md-icon mx-auto" loading="lazy" decoding="async">
                 <div>
                     <p class="h4 fw-bold mb-0">Irrigation Systems</p>
                 </div>
             </div>
-            <div class="col p-5 text-center box">
+            <div class="col p-3 text-center box">
                 <img src="./assets/hose.png" alt="" class="md-icon mx-auto" loading="lazy" decoding="async">
                 <div>
                     <p class="h4 fw-bold mb-0">Water Features</p>
                 </div>
             </div>
-            <div class="col p-5 text-center box">
+            <div class="col p-3 text-center box">
                 <img src="assets/grass.png" alt="" class="md-icon mx-auto" loading="lazy" decoding="async">
                 <div>
                 <p class="h4 fw-bold mb-0">Weeding</p>
                 </div>
             </div>
-            <div class="col p-5 text-center box">
+            <div class="col p-3 text-center box">
                 <img src="./assets/lawn-mower.png" alt="" class="md-icon mx-auto" loading="lazy" decoding="async">
                 <div>
                     <p class="h4 fw-bold mb-0">Prevention</p>
